--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				</div>
 				<div class="row justify-content-center pt-5">
 					<div class="col-md-12">
-						<h3>Primeros pasos</h3>
+						<h3>Primeros pasos 🦶🏻</h3>
 						<p class="lead mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pretium ante urna, sed varius nisi fermentum vitae. Sed iaculis efficitur eros ut accumsan. Sed vitae ullamcorper tortor. Aliquam ullamcorper libero at justo maximus sagittis. Cras porta gravida elit in dictum. Sed laoreet vulputate nulla, eu congue dolor.</p>
 						<ul class="ks-cboxtags">	
 					    <li>
