--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 				</div>
 				<div id="herramientas" class="row justify-content-center pt-5 nav-padding">
 					<div class="col-md-12">
-						<h3>Herramientas</h3>
+						<h3>Herramientas 🛠</h3>
 						<p class="lead mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pretium ante urna, sed varius nisi fermentum vitae. Sed iaculis efficitur eros ut accumsan. Sed vitae ullamcorper tortor. Aliquam ullamcorper libero at justo maximus sagittis. Cras porta gravida elit in dictum. Sed laoreet vulputate nulla, eu congue dolor.</p>
 						<ul class="ks-cboxtags">
 					    <li>
@@ -123,7 +123,7 @@
 				</div>
 				<div id="pruebas" class="row justify-content-center pt-5 nav-padding">
 					<div class="col-md-12 pt-2">
-						<h3>Pruebas</h3>
+						<h3>Pruebas 📝</h3>
 						<p class="lead mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pretium ante urna, sed varius nisi fermentum vitae. Sed iaculis efficitur eros ut accumsan. Sed vitae ullamcorper tortor. Aliquam ullamcorper libero at justo maximus sagittis. Cras porta gravida elit in dictum. Sed laoreet vulputate nulla, eu congue dolor.</p>
 						<ul class="ks-cboxtags">
 					    <li>
