Se agrega barra de progreso dinámica

--- a/index.html
+++ b/index.html
@@ -58,11 +58,16 @@
 				</div>
 			</div>	
 			</nav>
+		<div class="progress fixed-bottom" style="height: 30px">
+			<div id="myBar" class="progress-bar bg-success" style="width: ">
+			</div>
+		</div>	
 		<section  id="primeros-pasos" class="ftco-section mt-5">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 text-center">
 						<h2 class="heading-section mb-5">Newbees on Sales 🐝</h2>
+						
 					</div>
 				</div>
 				<div class="row justify-content-center pt-5">
