corrección menor barra de progreso

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
 			</div>	
 			</nav>
 		<div class="progress fixed-bottom" style="height: 30px">
-			<div id="myBar" class="progress-bar bg-success" style="width: ">
-			</div>
+			<div id="myBar" class="progress-bar bg-success" style="width: 0"></div>
 		</div>	
 		<section  id="primeros-pasos" class="ftco-section mt-5">
 			<div class="container">
