--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </head>
 <body>
     <section class="row">
-        <a href="/sales"  class="col-12 col-md-6 vh-100 bg-yellow d-flex align-items-center">
+        <a href="sales"  class="col-12 col-md-6 vh-100 bg-yellow d-flex align-items-center">
             <div class="h2 container text-center">
                 Sales 🤝
             </div>
         </a>
-        <a href="/designops"  class="col-12 col-md-6 vh-100 bg-light d-flex align-items-center">
+        <a href="designops"  class="col-12 col-md-6 vh-100 bg-light d-flex align-items-center">
             <div class="h2 container text-center">
                 DesignOps✨
             </div>
