--- a/sales/index.html
+++ b/sales/index.html
@@ -4,7 +4,7 @@
   	<title>Sales 💻 - Onboarding</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="shortcut icon" href="assets/img/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="../assets/css/style.css">
