--- a/sales/index.html
+++ b/sales/index.html
@@ -160,5 +160,6 @@
     <script src="js/popper.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/main.js"></script>
+	<script src="../assets/js/confetti.js"></script>
   </body>
 </html>
