--- a/designops/index.html
+++ b/designops/index.html
@@ -156,10 +156,10 @@
 			</div>
 		</section>	  
 
-    <script src="js/jquery.min.js"></script>
-    <script src="js/popper.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="../assets/js/jquery.min.js"></script>
+    <script src="../assets/js/popper.js"></script>
+    <script src="../assets/js/bootstrap.min.js"></script>
 	<script src="../assets/js/confetti.js"></script>
+	<script src="js/main.js"></script>
   </body>
 </html>
