Se agrega checklist comercial y se deja standby checklist diseño

--- a/sales/index.html
+++ b/sales/index.html
@@ -48,12 +48,6 @@
 						<li class="nav-item">
 							<a class="nav-link" href="#primeros-pasos">Primeros pasos</a>
 						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#herramientas">Herramientas</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#pruebas">Pruebas</a>
-						</li>
 					</ul>
 				</div>
 			</div>	
@@ -71,84 +65,141 @@
 				</div>
 				<div class="row justify-content-center pt-5">
 					<div class="col-md-12">
-						<h3>Primeros pasos 🦶🏻</h3>
+						<h3>Día 3🦶🏻</h3>
 						<p class="lead mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pretium ante urna, sed varius nisi fermentum vitae. Sed iaculis efficitur eros ut accumsan. Sed vitae ullamcorper tortor. Aliquam ullamcorper libero at justo maximus sagittis. Cras porta gravida elit in dictum. Sed laoreet vulputate nulla, eu congue dolor.</p>
 						<ul class="ks-cboxtags">	
 					    <li>
 					    	<input type="checkbox" id="1" class="box">
-					    	<label for="1">Presentación de industrias y un buen deal 👌🏻</label>
+					    	<label for="1">Registrate en el nuevo Beetrack Academy y ver las lecciones de “Primeros pasos”</label>
 					    </li>
 					    <li>
 					    	<input type="checkbox" id="2" class="box">
-					    	<label for="2">Presentación Comercial</label>
+					    	<label for="2">Tomar los cursos de LastMile (principiante e intermedio)</label>
 					    </li>
 					    <li>
 					    	<input type="checkbox" id="3" class="box">
-					    	<label for="3">Herramientas</label>
+					    	<label for="3">Leer <a href="https://www.beetrack.com/hubfs/Onboarding/Manual%20Beetrack%20PlannerPro%20(1).pdf" target="_blank">Primeros pasos PlannerPro</a></label>
 					    </li>
 						<li>
 					    	<input type="checkbox" id="4" class="box">
-					    	<label for="4">Lead Generation 💪🏻</label>
-					    </li>
-						<li>
-					    	<input type="checkbox" id="5" class="box">
-					    	<label for="5">Presentaciones a clientes y conceptos 🤝</label>
+					    	<label for="4">Leer <a href="https://www.beetrack.com/hubfs/Onboarding/Cuatro%20Pasos%20para%20Cargar%20Pedidos%20en%20Beetrack.pdf" target="_blank">Primeros pasos LastMile</a></label>
 					    </li>
 					  </ul>
 					</div>
 				</div>
-				<div id="herramientas" class="row justify-content-center pt-5 nav-padding">
+				<div class="row justify-content-center pt-5 nav-padding">
 					<div class="col-md-12">
-						<h3>Herramientas 🛠</h3>
-						<p class="lead mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pretium ante urna, sed varius nisi fermentum vitae. Sed iaculis efficitur eros ut accumsan. Sed vitae ullamcorper tortor. Aliquam ullamcorper libero at justo maximus sagittis. Cras porta gravida elit in dictum. Sed laoreet vulputate nulla, eu congue dolor.</p>
+						<h3>Día 4 al 8🚶🏻🚶🏻‍♀️</h3>
 						<ul class="ks-cboxtags">
 					    <li>
+					    	<input type="checkbox" id="5" class="box">
+					    	<label for="5">Asistir a <strong>2 capacitaciones masivas</strong></label>
+					    </li>
+					    <li>
 					    	<input type="checkbox" id="6" class="box">
-					    	<label for="6">Presentación de industrias y un buen deal 👌🏻</label>
+					    	<label for="6">Asistir de <strong>4 a 6 capacitaciones personalizadas</strong> en conjunto a un Account Partner</label>
 					    </li>
 					    <li>
 					    	<input type="checkbox" id="7" class="box">
-					    	<label for="7">Presentación Comercial</label>
+					    	<label for="7">Leer <a href="https://beetrack.atlassian.net/wiki/spaces/SALES/pages/1886945298/Glosario+Log+stica" target="_blank">Glosario logística</a></label>
 					    </li>
-					    <li>
+						<li>
 					    	<input type="checkbox" id="8" class="box">
-					    	<label for="8">Herramientas</label>
+					    	<label for="8">Ver <a href="https://docs.google.com/presentation/d/1uDMIRpPluaAvqucY7roeaqFGD3QgIvg_dOPox4phh8Q/edit#slide=id.gde4567f149_0_106" target="_blank">Casos de éxito</a></label>
 					    </li>
 						<li>
 					    	<input type="checkbox" id="9" class="box">
-					    	<label for="9">Lead Generation 💪🏻</label>
-					    </li>
-						<li>
-					    	<input type="checkbox" id="10" class="box">
-					    	<label for="10">Presentaciones a clientes y conceptos 🤝</label>
+					    	<label for="9">Leer <a href="https://beetrack.atlassian.net/wiki/spaces/SALES/pages/1918599246/Indice+Fichas+t+cnicas" target="_blank">Fichas técnicas</a></label>
 					    </li>
 					  </ul>
 					</div>
 				</div>
-				<div id="pruebas" class="row justify-content-center pt-5 nav-padding">
-					<div class="col-md-12 pt-2">
-						<h3>Pruebas 📝</h3>
-						<p class="lead mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pretium ante urna, sed varius nisi fermentum vitae. Sed iaculis efficitur eros ut accumsan. Sed vitae ullamcorper tortor. Aliquam ullamcorper libero at justo maximus sagittis. Cras porta gravida elit in dictum. Sed laoreet vulputate nulla, eu congue dolor.</p>
-						<ul class="ks-cboxtags">
+				<div class="row justify-content-center pt-5">
+					<div class="col-md-12">
+						<h3>Día 9 al infinito 🚀</h3>
+						<ul class="ks-cboxtags">	
+					    <li>
+					    	<input type="checkbox" id="10" class="box">
+					    	<label for="10">Participar de 2 a 3 reuniones comerciales al día</label>
+					    </li>
 					    <li>
 					    	<input type="checkbox" id="11" class="box">
-					    	<label for="11">Presentación de industrias y un buen deal 👌🏻</label>
+					    	<label for="11">Reunión con Manager para revisar el <a href="https://docs.google.com/presentation/d/1wpgRvAUxUHuFCqFg0qlTQty2PfsbsFQ4/edit#slide=id.p1" target="_blank">Manual de gestión comercial</a> en conjunto</label>
 					    </li>
 					    <li>
 					    	<input type="checkbox" id="12" class="box">
-					    	<label for="12">Presentación Comercial</label>
+					    	<label for="12">Leer <a href="https://docs.google.com/presentation/d/1wpgRvAUxUHuFCqFg0qlTQty2PfsbsFQ4/edit#slide=id.p1" target="_blank">Principales dolores de la industria</a></label>
 					    </li>
-					    <li>
+						<li>
 					    	<input type="checkbox" id="13" class="box">
-					    	<label for="13">Herramientas</label>
+					    	<label for="13">Releer 👀 <a href="https://docs.google.com/presentation/d/1wpgRvAUxUHuFCqFg0qlTQty2PfsbsFQ4/edit#slide=id.p1" target="_blank">Manual de gestión comercial</a></label>
 					    </li>
-						<li>
+					  </ul>
+					</div>
+				</div>
+				<div class="row justify-content-center pt-5">
+					<div class="col-md-12">
+						<h3>Día 10 🤓</h3>
+						<ul class="ks-cboxtags">	
+					    <li>
 					    	<input type="checkbox" id="14" class="box">
-					    	<label for="14">Lead Generation 💪🏻</label>
+					    	<label for="14">Demo day</label>
+					    </li>
+					  </ul>
+					</div>
+				</div>
+				<div class="row justify-content-center pt-5">
+					<div class="col-md-12">
+						<h3>Día 11 📚</h3>
+						<ul class="ks-cboxtags">	
+					    <li>
+					    	<input type="checkbox" id="15" class="box">
+					    	<label for="15">Leer <a href="https://beetrack.atlassian.net/wiki/spaces/SALES/pages/1895727105" target="_blank">Sales Pipeline Hubspot</a></label>
+					    </li>
+					  </ul>
+					</div>
+				</div>
+				<div class="row justify-content-center pt-5">
+					<div class="col-md-12">
+						<h3>Día 12 y 13 💫</h3>
+						<ul class="ks-cboxtags">	
+					    <li>
+					    	<input type="checkbox" id="16" class="box">
+					    	<label for="16">Día 1 como Lead generator</label>
 					    </li>
 						<li>
-					    	<input type="checkbox" id="15" class="box">
-					    	<label for="15">Presentaciones a clientes y conceptos 🤝</label>
+					    	<input type="checkbox" id="17" class="box">
+					    	<label for="17">Día 2 como Lead generator</label>
+					    </li>
+					  </ul>
+					</div>
+				</div>
+				<div class="row justify-content-center pt-5">
+					<div class="col-md-12">
+						<h3>Día 15 🤘🏻</h3>
+						<ul class="ks-cboxtags">	
+					    <li>
+					    	<input type="checkbox" id="18" class="box">
+					    	<label for="18">Presentación comercial BDM</a></label>
+					    </li>
+						<li>
+					    	<input type="checkbox" id="19" class="box">
+					    	<label for="19">Revisar <a href="https://beetrack.atlassian.net/wiki/spaces/SALES/pages/1627717747/F+brica+de+Rockstars" target="_blank">Fábrica de rockstars 🎸</a></label>
+					    </li>
+					  </ul>
+					</div>
+				</div>
+				<div class="row justify-content-center pt-5">
+					<div class="col-md-12">
+						<h3>Día 16 😱💪🏻</h3>
+						<ul class="ks-cboxtags">	
+					    <li>
+					    	<input type="checkbox" id="20" class="box">
+					    	<label for="20">Presentación comercial a Felipe Porter</label>
+					    </li>
+						<li>
+					    	<input type="checkbox" id="21" class="box">
+					    	<label for="21">Evaluación conceptual 📝</label>
 					    </li>
 					  </ul>
 					</div>
