corrección de texto

--- a/sales/index.html
+++ b/sales/index.html
@@ -70,7 +70,7 @@
 						<ul class="ks-cboxtags">	
 					    <li>
 					    	<input type="checkbox" id="1" class="box">
-					    	<label for="1">Registrate en el nuevo Beetrack Academy y ver las lecciones de “Primeros pasos”</label>
+					    	<label for="1">Registrarse en el nuevo Beetrack Academy y ver las lecciones de “Primeros pasos”</label>
 					    </li>
 					    <li>
 					    	<input type="checkbox" id="2" class="box">
