Se agregan créditos

--- a/sales/index.html
+++ b/sales/index.html
@@ -50,6 +50,9 @@
 						</li>
 					</ul>
 				</div>
+				<span class="navbar-text pr-2">
+					Diseñado con <i class="fa fa-heart"></i> por DesignOps✨	
+				  </span>
 			</div>	
 			</nav>
 		<div class="progress fixed-bottom" style="height: 30px">
@@ -205,8 +208,8 @@
 					</div>
 				</div>
 			</div>
-		</section>	  
-
+		</section>
+		
 		<script src="../assets/js/jquery.min.js"></script>
 		<script src="../assets/js/popper.js"></script>
 		<script src="../assets/js/bootstrap.min.js"></script>
