correccion url dolores de la industria

--- a/sales/index.html
+++ b/sales/index.html
@@ -131,7 +131,7 @@
 					    </li>
 					    <li>
 					    	<input type="checkbox" id="12" class="box">
-					    	<label for="12">Leer <a href="https://docs.google.com/presentation/d/1wpgRvAUxUHuFCqFg0qlTQty2PfsbsFQ4/edit#slide=id.p1" target="_blank">Principales dolores de la industria</a></label>
+					    	<label for="12">Leer <a href="https://beetrack.atlassian.net/wiki/spaces/SALES/pages/1901789224/Dolores+Industria" target="_blank">Principales dolores de la industria</a></label>
 					    </li>
 						<li>
 					    	<input type="checkbox" id="13" class="box">
