Cambio texto y url Youtube

--- a/sales/index.html
+++ b/sales/index.html
@@ -108,7 +108,7 @@
 					    </li>
 						<li>
 					    	<input type="checkbox" id="8" class="box">
-					    	<label for="8">Ver <a href="https://docs.google.com/presentation/d/1uDMIRpPluaAvqucY7roeaqFGD3QgIvg_dOPox4phh8Q/edit#slide=id.gde4567f149_0_106" target="_blank">Casos de éxito</a></label>
+					    	<label for="8">Ver todos los videos de <a href="https://www.youtube.com/playlist?list=PLi_HGS3Bklk-lvMryggYbLbzhx4WAIANu" target="_blank">Casos de éxito</a></label>
 					    </li>
 						<li>
 					    	<input type="checkbox" id="9" class="box">
