se agrega texto descriptivo

--- a/sales/index.html
+++ b/sales/index.html
@@ -63,13 +63,14 @@
 				<div class="row">
 					<div class="col-md-12 text-center">
 						<h2 class="heading-section mb-5">Newbees on Sales 🐝</h2>
-						
+						<p class="lead mb-1 text-left"><strong>¡Comencemos!💃🏻🕺🏻</strong></br>
+							Aquí podrás encontrar la lista de las tareas relacionadas a cada uno de los días de tu Sales onboarding.</p>
+						<p class="lead mb-4 text-left">Marca las tareas que ya tienes realizadas para que puedas ir revisando tu avance. </p>
 					</div>
 				</div>
 				<div class="row justify-content-center pt-5">
 					<div class="col-md-12">
 						<h3>Día 3🦶🏻</h3>
-						<p class="lead mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pretium ante urna, sed varius nisi fermentum vitae. Sed iaculis efficitur eros ut accumsan. Sed vitae ullamcorper tortor. Aliquam ullamcorper libero at justo maximus sagittis. Cras porta gravida elit in dictum. Sed laoreet vulputate nulla, eu congue dolor.</p>
 						<ul class="ks-cboxtags">	
 					    <li>
 					    	<input type="checkbox" id="1" class="box">
